--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "firebase": "^9.6.1",
+    "firebaseui": "^6.0.0",
     "pure-react-carousel": "^1.27.8",
     "react": "^17.0.2",
     "react-device-detect": "^2.1.2",
