--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.6.1",
+    "firebase-admin": "^10.0.1",
     "firebaseui": "^6.0.0",
     "pure-react-carousel": "^1.27.8",
     "react": "^17.0.2",
