--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
+    "react-swipeable-views": "^0.14.0",
+    "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
